--- a/MPfm/MPfm.WPF/Classes/Windows/EffectsWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/EffectsWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
-        WindowStartupLocation="CenterScreen" Background="#FF242F35"
+        WindowStartupLocation="CenterScreen" Background="{DynamicResource BrushBackgroundColor}"
         Title="Effects" Height="426" Width="954" Icon="/MPfm.WPF;component/Resources/Icon.ico" ResizeMode="NoResize">
     <Grid Margin="0" Background="{DynamicResource BrushBackgroundColor}">
         <Grid.ColumnDefinitions>
