--- a/MPfm/MPfm.WPF/Classes/Windows/FirstRunWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/FirstRunWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
-        WindowStartupLocation="CenterScreen" Background="#FF242F35"
+        WindowStartupLocation="CenterScreen" Background="{DynamicResource BrushBackgroundColor}"
         Title="Welcome to Sessions" Height="426" Width="677.9" Icon="/MPfm.WPF;component/Resources/Icon.ico">
     <Grid Margin="8">
         <Grid.RowDefinitions>
