--- a/MPfm/MPfm.WPF/Classes/Windows/ResumePlaybackWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/ResumePlaybackWindow.xaml
@@ -4,14 +4,14 @@
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
         xmlns:models="clr-namespace:MPfm.Library.Objects;assembly=MPfm.Library"
-        WindowStartupLocation="CenterScreen" Background="#FF242F35"
+        WindowStartupLocation="CenterScreen" Background="{DynamicResource BrushBackgroundColor}"
         Title="Resume Playback" Height="426" Width="677.9" Icon="/MPfm.WPF;component/Resources/Icon.ico">
     <Grid Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Background="#FF455865">
+        <Grid Grid.Row="0" Background="{DynamicResource BrushHeaderBackgroundColor}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
