--- a/MPfm/MPfm.WPF/Classes/Windows/EffectsWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/EffectsWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
         WindowStartupLocation="CenterScreen" Background="{DynamicResource BrushBackgroundColor}"
-        Title="Effects" Height="426" Width="954" Icon="/MPfm.WPF;component/Resources/Icon.ico" ResizeMode="NoResize">
+        Title="Effects" Height="426" Width="954" Icon="/MPfm.WPF;component/Resources/Icon.ico" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="ToolWindow">
     <Grid Margin="0" Background="{DynamicResource BrushBackgroundColor}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
