--- a/MPfm/MPfm.WPF/Classes/Windows/SplashWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/SplashWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         WindowStartupLocation="CenterScreen"
-        Title="SplashWindow" Height="400" Width="500" WindowStyle="None" ResizeMode="NoResize" Topmost="True" Icon="/MPfm.WPF;component/Resources/Icon.ico">
+        Title="SplashWindow" Height="400" Width="500" WindowStyle="None" ResizeMode="NoResize" Topmost="True" Icon="/MPfm.WPF;component/Resources/Icon.ico" ShowInTaskbar="False">
     <Grid Background="{DynamicResource BrushBackgroundColor}">
         <Label x:Name="lblStatus" Content="Loading..." HorizontalAlignment="Left" Margin="4,368,-4,0" VerticalAlignment="Top" Width="500" Foreground="White" FontSize="13" FontFamily="/Resources/Fonts/#Roboto Light" />
         <Image x:Name="imageLogo" Stretch="Uniform" Width="240" Height="60" />
