--- a/MPfm/MPfm.WPF/Classes/Windows/SyncWebBrowserWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/SyncWebBrowserWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
         WindowStartupLocation="CenterScreen" Background="{DynamicResource BrushBackgroundColor}"
-        Title="Sync (Web Browser)" Height="203.333" Width="495.233" Icon="/MPfm.WPF;component/Resources/Icon.ico">
+        Title="Sync (Web Browser)" Height="203.333" Width="495.233" Icon="/MPfm.WPF;component/Resources/Icon.ico" ShowInTaskbar="False" WindowStyle="ToolWindow">
     <Grid Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
